--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,6 +11,7 @@
           <a href="/">{{ site.plainwhite.name }}</a>
         </h2>
         <p class="tagline">{{ site.plainwhite.tagline }}</p>
+        <p class="mail">{{ site.plainwhite.email }}</p>
         <ul class="social">
           {%- if site.plainwhite.social_links.github -%}
             <a href="https://github.com/{{ site.plainwhite.social_links.github }}">
