--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -88,17 +88,27 @@ main {
     flex-direction: column;
     align-items: center;
     h2 {
-      font-size: 22px;
+      font-size: 25px;
       margin-top: 25px;
       margin-bottom: 0;
       color: #222222;
       font-weight: normal;
     }
     .tagline {
-      font-size: 22px;
-      margin-top: 17px;
+      font-size: 20px;
+      margin-top: 10px;
+      margin-bottom: 0px;
       color: #aaa;
       white-space: pre-wrap;
+      line-height: normal;
+    }
+    .mail {
+      font-size: 15px;
+      font-weight: bold;
+      margin-top: 15px;
+      color: #222222;
+      white-space: pre-wrap;
+      // text-align: center;
       line-height: normal;
     }
     img {
