--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,5 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Raleway:400,700" rel="stylesheet">
 <link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <title>{{ page.title | default: site.title }}</title>
+<link rel="icon" type="image/svg" href="{{"/assets/meerkat.svg" | relative_url}}"> 
 {% seo %}
