--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,11 +6,11 @@
   <body>
     <main class="container">
       <section class="about">
-        <a href="/"><img src="{{ "/assets/portfolio.png" | relative_url }}" alt="{{ site.plainwhite.name }}"></a>
         <h2 id="title">
           <a href="/">{{ site.plainwhite.name }}</a>
         </h2>
         <p class="tagline">{{ site.plainwhite.tagline }}</p>
+        <a href="/"><img src="{{ "/assets/portfolio.png" | relative_url }}" alt="{{ site.plainwhite.name }}"></a>
         <p class="mail">{{ site.plainwhite.email }}</p>
         <ul class="social">
           {%- if site.plainwhite.social_links.github -%}
@@ -40,9 +40,13 @@
           <nav class="navigation">
             <ul>
               {% for link in site.plainwhite.navigation %}
-                <li>
-                  <a href="{{ link.url }}">{{ link.title }}</a>
-                </li>
+                {%- if link.title == "Beyond that..." -%}
+                  <a href="{%- post_url 2020-01-02-more -%}">{{ link.title }}</a>
+                {%- else -%}
+                  <li>
+                    <a href="{{ link.url }}">{{ link.title }}</a>
+                  </li>
+                {%- endif -%}
               {% endfor %}
             </ul>
           </nav>
