--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -6,7 +6,8 @@ $linkColor: #0a59b0;
 $mobileW: 768px;
 $smallMobileW: 480px;
 $bigScreenW: 1600px;
-$leftWidth: 220px;
+$leftWidth: 287px;
+$imageWidth: 300px;
 
 *,
 *:before,
@@ -76,6 +77,7 @@ main {
     display: flex;
     height: 100vh;
     padding-bottom: 15vh;
+    // padding-right: 5vh;
     @media screen and (max-width: $mobileW) {
       height: auto;
       padding: 10vh 0;
@@ -84,20 +86,21 @@ main {
       position: fixed;
     }
     min-width: $leftWidth;
+    // max-width: $leftWidth;
     justify-content: center;
     flex-direction: column;
     align-items: center;
     h2 {
       font-size: 25px;
       margin-top: 25px;
-      margin-bottom: 0;
+      margin-bottom: 0px;
       color: #222222;
       font-weight: normal;
     }
     .tagline {
       font-size: 20px;
       margin-top: 10px;
-      margin-bottom: 0px;
+      margin-bottom: 25px;
       color: #aaa;
       white-space: pre-wrap;
       line-height: normal;
@@ -110,9 +113,10 @@ main {
       white-space: pre-wrap;
       // text-align: center;
       line-height: normal;
+      // padding-right: 50px;
     }
     img {
-      max-width: 150px;
+      max-width: 200px;
     }
   }
 }
@@ -249,12 +253,81 @@ main {
   }
 }
 
+.pub-box {
+  border-radius: 10px;
+  border: 2px solid rgb(255, 255, 255);
+  background: rgb(255, 255, 255);
+  width: 100%;
+  height: 100%;
+  position: center;
+}
+
+.pubtitle {
+  margin-top: 5px;
+}
+
+.link-bracket {
+  color: #0c6ed6;
+  font-size: medium;
+  padding-right: 3px;
+  text-decoration: none;
+}
+
+.link-bracket:hover {
+  color: #64afff;
+}
+
+.no-block {
+  font-size: medium;
+  font-weight: bold;
+  display: inline; 
+}
+
+.hover-shadow:hover {
+  box-shadow:0 0px 0px 0 rgba(0,0,0,0.2),0 4px 20px 0 rgba(0,0,0,0.1)
+}
+
+.pub-image {
+  margin-top: 5px;
+  margin-bottom: 5px;
+  max-width: 100%;
+  height: auto;
+  position: center;
+}
+
+.pubcol-left {
+  // display: inline;
+  float: left;
+  width: 20%;
+  // position: center;
+  // width: fit-content;
+}
+
+.pubcol-right {
+  // display:
+  float: right;
+  width: 80%;
+}
+
 #posts-label {
   border-bottom: 1px solid #eee;
-  font-size: 15px;
+  font-size: 17px;
   color: #777;
   text-transform: uppercase;
   letter-spacing: 0.5px;
   padding-bottom: 10px;
-  font-weight: normal;
+  font-weight: bold;
 }
+
+.back-button{
+  fill: #66b0ffde;
+}
+
+.back-button:hover{
+  fill: #8fc5ff;
+}
+
+// .back-button:hover {
+//   background-color: rgba(219, 216, 216, 0.678); /* Green */
+//   color: white;
+// }
