--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -57,7 +57,7 @@ layout: default
 
 <ul class="posts">
   <li>
-    <h1 id="posts-label">Projects</h1>
+    <h1 id="posts-label">Selected Projects</h1>
   </li>
   {%- for post in site.posts -%}
     {%- if post.type == 'proj' -%}
