--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,13 @@
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <title>{{ page.title | default: site.title }}</title>
 <link rel="icon" type="image/svg" href="{{"/assets/meerkat.svg" | relative_url}}"> 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-158807702-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-158807702-1');
+</script>
 {% seo %}
