--- a/_includes/pubcard.html
+++ b/_includes/pubcard.html
@@ -33,7 +33,7 @@
               {%- when "conf" -%}
                <h5 class="no-block">{{post[attr]}} </h5>
               {%- when "paperlink" -%}
-               <a class="link-bracket" href="{{'assets/papers/' | append: post.paperlink | relative_url}}">[pdf]</a>
+               <a class="link-bracket" href="{{post.paperlink}}">[pdf]</a>
               {%- when "code" -%}
                <a class="link-bracket" href="{{ post.code }}">[code]</a>
               {%- when "poster" -%}
