--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -254,7 +254,7 @@ main {
 }
 
 .pub-box {
-  border-radius: 10px;
+  border-radius: 5px;
   border: 2px solid rgb(255, 255, 255);
   background: rgb(255, 255, 255);
   width: 100%;
@@ -263,7 +263,7 @@ main {
 }
 
 .pubtitle {
-  margin-top: 5px;
+  margin-top: 0px;
 }
 
 .link-bracket {
@@ -281,6 +281,11 @@ main {
   font-size: medium;
   font-weight: bold;
   display: inline; 
+  text-decoration: none;
+}
+
+.no-block-link:hover {
+  color: #64afff;
 }
 
 .hover-shadow:hover {
@@ -291,14 +296,15 @@ main {
   margin-top: 5px;
   margin-bottom: 5px;
   max-width: 100%;
-  height: auto;
+  max-width: 100%;
   position: center;
 }
 
 .pubcol-left {
   // display: inline;
   float: left;
-  width: 20%;
+  width: 19.5%;
+  height: auto;
   // position: center;
   // width: fit-content;
 }
@@ -306,7 +312,8 @@ main {
 .pubcol-right {
   // display:
   float: right;
-  width: 80%;
+  width: 79.5%;
+  height: auto;
 }
 
 #posts-label {
