--- a/_sass/plain.scss
+++ b/_sass/plain.scss
@@ -278,7 +278,7 @@ main {
 }
 
 .no-block {
-  font-size: medium;
+  font-size: 100%;
   font-weight: bold;
   display: inline; 
   text-decoration: none;
