updata Gscholar and fix twitter link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,13 @@
               </li>
             </a>
           {%- endif -%}
+          {%- if site.plainwhite.social_links.gscholar -%}
+            <a href="https://scholar.google.com/{{ site.plainwhite.social_links.gscholar }}">
+              <li>
+                <i class="icon-gscholar-circled"></i>
+              </li>
+            </a>
+          {%- endif -%}
           {%- if site.plainwhite.social_links.linkedIn -%}
             <a href="https://www.linkedin.com/{{ site.plainwhite.social_links.linkedIn }}">
               <li>
