--- a/_sass/ext/_fonts.scss
+++ b/_sass/ext/_fonts.scss
@@ -1,11 +1,11 @@
 @font-face {
   font-family: 'fontello';
-  src: url('../font/fontello.eot?26793073');
-  src: url('../font/fontello.eot?26793073#iefix') format('embedded-opentype'),
-       url('../font/fontello.woff2?26793073') format('woff2'),
-       url('../font/fontello.woff?26793073') format('woff'),
-       url('../font/fontello.ttf?26793073') format('truetype'),
-       url('../font/fontello.svg?26793073#fontello') format('svg');
+  src: url('../font/fontello.eot?19269709');
+  src: url('../font/fontello.eot?19269709#iefix') format('embedded-opentype'),
+       url('../font/fontello.woff2?19269709') format('woff2'),
+       url('../font/fontello.woff?19269709') format('woff'),
+       url('../font/fontello.ttf?19269709') format('truetype'),
+       url('../font/fontello.svg?19269709#fontello') format('svg');
   font-weight: normal;
   font-style: normal;
 }
@@ -15,7 +15,7 @@
 @media screen and (-webkit-min-device-pixel-ratio:0) {
   @font-face {
     font-family: 'fontello';
-    src: url('../font/fontello.svg?26793073#fontello') format('svg');
+    src: url('../font/fontello.svg?19269709#fontello') format('svg');
   }
 }
 */
@@ -24,7 +24,7 @@
   font-family: "fontello";
   font-style: normal;
   font-weight: normal;
-  speak: none;
+  speak: never;
  
   display: inline-block;
   text-decoration: inherit;
@@ -55,7 +55,7 @@
   /* text-shadow: 1px 1px 1px rgba(127, 127, 127, 0.3); */
 }
  
-.icon-calendar:before { content: '\e800'; } /* '' */
-.icon-github-circled:before { content: '\f09b'; } /* '' */
-.icon-twitter-squared:before { content: '\f304'; } /* '' */
-.icon-linkedin-squared:before { content: '\f30c'; } /* '' */
+.icon-gscholar-circled:before { content: '\e800'; } /* 'î €' */
+.icon-github-circled:before { content: '\f09b'; } /* 'ï‚›' */
+.icon-twitter-squared:before { content: '\f304'; } /* 'ïŒ„' */
+.icon-linkedin-squared:before { content: '\f30c'; } /* 'ïŒŒ' */
