--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,10 +2,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 <link href="https://fonts.googleapis.com/css?family=Merriweather:300|Raleway:400,700" rel="stylesheet">
-<link rel="stylesheet" href="{{ '/assets/css/style.css' | relative_url }}">
+<link rel="stylesheet" href="{{ "/assets/css/style.css" | relative_url }}">
+<link rel="icon" type="image/ico" href="/assets/meerkat.ico"> 
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <title>{{ page.title | default: site.title }}</title>
-<link rel="icon" type="image/png" href="/assets/meer.png"> 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-158807702-1"></script>
 <script>
