--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
           <a href="/">{{ site.plainwhite.name }}</a>
         </h2>
         <p class="tagline">{{ site.plainwhite.tagline }}</p>
-        <a href="/"><img src="{{ "/assets/portfolio.png" | relative_url }}" alt="{{ site.plainwhite.name }}"></a>
+        <a href="/"><img src="{{ '/assets/portfolio.png' | relative_url }}" alt="{{ site.plainwhite.name }}"></a>
         <p class="mail">{{ site.plainwhite.email }}</p>
         <ul class="social">
           {%- if site.plainwhite.social_links.github -%}
