--- a/_includes/pubcard.html
+++ b/_includes/pubcard.html
@@ -2,7 +2,7 @@
 <div class='w3-padding-small'>
     <div class="w3-row hover-shadow pub-box" id="about">
       <div class="pubcol-left  w3-hide-small">
-        <img src="{{ '/assets/papers/' | append: post.thumb  | relative_url}}" class="w3-round w3-image w3-opacity-min pub-image" alt="Table Setting">
+        <img src="{{ '/assets/papers/' | append: post.thumb  | relative_url}}" style="max-width: 100%; height: auto;" class="w3-round w3-image w3-opacity-min pub-image" alt="Table Setting">
       </div>
       
       <div class="pubcol-right ">
